--- a/cv.css
+++ b/cv.css
@@ -15,37 +15,6 @@ a {
 a:hover{
      color: #b3d4fc;
 }
-header {
-    background-color: #282828;
-    padding: 2rem 0;
-    text-align: center;
-}
-
-header h1 {
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-}
-
-.title{
-     margin-top: 0;
-     font-size: 1.2rem;
-     font-weight: normal;
-}
-#theme-toggle {
-    background-color: #569cd6;
-    color: #fff;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 1rem;
-    transition: background-color 0.3s ease;
-}
-
-#theme-toggle:hover {
-    background-color: #417ab3;
-}
-
 main {
     padding: 2rem;
     max-width: 800px;
@@ -70,15 +39,19 @@ section h2 {
 section p, li{
     margin-bottom: 10px;
 }
-
 .contact-info {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: flex-start;
+     margin-bottom: 1.5rem;
+    flex-wrap: wrap;
+
 }
 .contact-item{
     margin-bottom: 5px;
+      margin-right: 15px;
     display: flex;
+
 }
 .contact-item .icon{
     margin-right: 5px;
@@ -172,25 +145,36 @@ footer {
     background-color: #282828;
 }
 /* Style for the profile image */
-  .profile-image {
-        text-align: center;
+ .profile-image {
+      display: flex;
+      justify-content: space-between;
+        align-items: center;
         margin-bottom: 2rem;
+         max-width: 800px; /* Ajustez la largeur maximale */
+         margin-left: auto;
+        margin-right: auto;
+
     }
     .profile-image img {
-        width: 200px;
-        height: 200px;
+      width: 150px; /* Ajustez la largeur de l'image */
+        height: 150px; /* Ajustez la hauteur de l'image */
         border-radius: 50%; /* Pour un cercle */
-        object-fit: cover; /* Pour éviter la déformation de l'image */
+        object-fit: cover;
          border: 2px solid #569cd6;
         box-shadow: 0 4px 8px rgba(0,0,0,0.2);
          margin-bottom: 10px;
          transition: transform 0.3s ease;
+        margin-right: 20px;
     }
-     .profile-image img:hover {
+    .profile-image img:hover {
        transform: scale(1.05);
     }
+        .profile-image h1 {
+        text-align: left; /* Aligner le nom à droite */
+         margin-left: 20px;
+        
+    }
 /* Animations */
-
 .contact-item, .experience-item, .education-item {
   transition: transform 0.3s ease;
 }
@@ -224,8 +208,6 @@ footer {
 #theme-body.light-theme footer {
     background-color: #e9ecef;
 }
-
-
 @media (max-width: 768px) {
     main {
         padding: 1rem;
@@ -242,5 +224,18 @@ footer {
         margin-left: 0;
        margin-top: 10px;
     }
+    .profile-image {
+        flex-direction: column;
+        align-items: center;
+       text-align: center;
+    }
+        .profile-image h1 {
+        text-align: center; /* Aligner le nom à droite */
+         margin-left: 0px;
+        
+    }
+   .profile-image img {
+       margin-right: 0;
+   }
 
 }
