--- a/header.css
+++ b/header.css
@@ -73,14 +73,19 @@ body.light-theme .main-nav ul li a {
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
-         text-align: center;
+        text-align: center;
     }
       .main-nav ul{
          margin-top: 10px;
         flex-direction: column;
+           align-items: center;
     }
      .main-nav ul li {
         margin-left: 0;
           margin-bottom: 10px;
+         text-align: center;
+     }
+   #theme-toggle{
+         margin-top: 0.5rem;
      }
 }
