--- a/header.css
+++ b/header.css
@@ -24,11 +24,15 @@ body {
     font-size: 1.5rem;
      font-weight: bold;
 }
+.main-nav {
+  position: relative;
+}
 .main-nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-     display: flex;
+    display: flex;
+
 }
 .main-nav ul li {
   margin-left: 20px;
@@ -68,24 +72,79 @@ body.light-theme .main-nav ul li a {
  body.light-theme .main-nav ul li a:hover{
     color: #007bff;
   }
+/* Styles for the hamburger menu button */
+.nav-toggle {
+    display: none; /* Initially hidden on larger screens */
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin-left: 20px;
+}
 
+.nav-toggle .hamburger {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #d4d4d4;
+    position: relative;
+    transition: background-color 0.3s ease;
+}
+.nav-toggle .hamburger::before,
+.nav-toggle .hamburger::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+     height: 3px;
+    background-color: #d4d4d4;
+  transition: transform 0.3s ease;
+}
+.nav-toggle .hamburger::before {
+    top: -7px;
+
+}
+
+.nav-toggle .hamburger::after {
+    top: 7px;
+
+}
+/* Styles for the menu when is opened*/
+.main-nav.active ul {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+   top: 100%;
+   left: 0;
+  width: 100%;
+   background-color: #282828;
+    border-top: 1px solid #333;
+    padding-bottom: 10px;
+}
+
+.main-nav.active ul li {
+  margin-left: 0;
+    text-align: center;
+      margin-top: 10px;
+}
 /* Responsive styles */
 @media (max-width: 768px) {
     .container {
-        flex-direction: column;
-        text-align: center;
+        flex-direction: row;
+           justify-content: space-between;
+            padding: 0 10px;
+        }
+    .nav-toggle {
+      display: block;
     }
-      .main-nav ul{
-         margin-top: 10px;
-        flex-direction: column;
-           align-items: center;
-    }
-     .main-nav ul li {
-        margin-left: 0;
-          margin-bottom: 10px;
-         text-align: center;
-     }
-   #theme-toggle{
-         margin-top: 0.5rem;
-     }
+   .main-nav ul {
+         display: none;
+      }
+  #theme-toggle{
+        margin-top: 0;
+       margin-right: 10px;
+  }
+  .main-nav.active ul {
+     display: flex;
+  }
 }
