--- a/header.css
+++ b/header.css
@@ -31,7 +31,7 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-   display: flex;
+    display: flex;
 
 }
 .main-nav ul li {
@@ -120,12 +120,14 @@ body.light-theme .main-nav ul li a {
     background-color: #282828;
     border-top: 1px solid #333;
     padding-bottom: 10px;
+    z-index: 10;
+
   }
   .main-nav.active ul li {
     margin-left: 0;
       text-align: center;
       margin-top: 10px;
-}
+  }
 /* Responsive styles */
 @media (max-width: 768px) {
     .container {
@@ -142,6 +144,7 @@ body.light-theme .main-nav ul li a {
    #theme-toggle{
         margin-top: 0;
          margin-right: 10px;
+          margin-left: 10px;
     }
   .main-nav.active ul {
       display: flex;
