--- a/header.css
+++ b/header.css
@@ -7,54 +7,42 @@ body {
 }
 
 /* Header styles */
-.header {
+.header .navbar {
     background-color: #282828;
+}
+
+.header .navbar-dark .navbar-brand {
     color: #d4d4d4;
-    padding: 1rem 0;
-    width: 100%;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-}
-
-.logo h1 {
-    margin: 0;
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.main-nav {
-    position: relative;
-}
-
-.main-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.main-nav ul li {
-    margin-left: 20px;
-}
-
-.main-nav ul li a {
+.header .navbar-dark .navbar-nav .nav-link {
     color: #d4d4d4;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s ease;
 }
 
-.main-nav ul li a:hover {
-    color: #569cd6;
+.header .navbar-dark .navbar-nav .nav-link:hover {
+     color: #569cd6;
+}
+/* Styles for light theme */
+body.light-theme .header .navbar {
+    background-color: #e9ecef;
 }
 
+body.light-theme .header .navbar-dark .navbar-brand {
+     color: #333;
+}
+
+body.light-theme .header .navbar-dark .navbar-nav .nav-link {
+    color: #333;
+}
+ body.light-theme .header .navbar-dark .navbar-nav .nav-link:hover {
+    color: #007bff;
+}
+
+body.light-theme .header .navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+/* Styles pour le bouton theme-toggle */
 #theme-toggle {
     background-color: #569cd6;
     color: #fff;
@@ -62,109 +50,9 @@ body {
     padding: 0.5rem 1rem;
     border-radius: 5px;
     cursor: pointer;
-    margin: 0;
     transition: background-color 0.3s ease;
 }
 
 #theme-toggle:hover {
     background-color: #417ab3;
-}
-
-/* Styles for light theme */
-body.light-theme .header {
-    background-color: #e9ecef;
-    color: #333;
-}
-
-body.light-theme .main-nav ul li a {
-    color: #333;
-}
-
-body.light-theme .main-nav ul li a:hover {
-    color: #007bff;
-}
-
-/* Styles for the hamburger menu button */
-.nav-toggle {
-    display: none; /* Initially hidden on larger screens */
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    margin-left: 20px;
-}
-
-.nav-toggle .hamburger {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #d4d4d4;
-    position: relative;
-    transition: background-color 0.3s ease;
-}
-
-.nav-toggle .hamburger::before,
-.nav-toggle .hamburger::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: #d4d4d4;
-    transition: transform 0.3s ease;
-}
-
-.nav-toggle .hamburger::before {
-    top: -7px;
-}
-
-.nav-toggle .hamburger::after {
-    top: 7px;
-}
-
-/* Styles for the menu when is opened */
-.main-nav.active ul {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: #282828;
-    border-top: 1px solid #333;
-    padding-bottom: 10px;
-    z-index: 10;
-}
-
-.main-nav.active ul li {
-    margin-left: 0;
-    text-align: center;
-    margin-top: 10px;
-}
-
-/* Responsive styles */
-@media (max-width: 768px) {
-    .container {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 0 10px;
-    }
-
-    .main-nav ul {
-        display: none;
-    }
-
-    .nav-toggle {
-        display: block;
-    }
-
-    #theme-toggle {
-        margin-top: 0;
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-
-    .main-nav.active ul {
-        display: flex;
-    }
 }
