--- a/header.css
+++ b/header.css
@@ -22,7 +22,7 @@ body {
 .header .navbar-dark .navbar-nav .nav-link:hover {
      color: #569cd6;
 }
-/* Styles for light theme */
+
 body.light-theme .header .navbar {
     background-color: #e9ecef;
 }
@@ -34,12 +34,16 @@ body.light-theme .header .navbar-dark .navbar-brand {
 body.light-theme .header .navbar-dark .navbar-nav .nav-link {
     color: #333;
 }
- body.light-theme .header .navbar-dark .navbar-nav .nav-link:hover {
+
+body.light-theme .header .navbar-dark .navbar-nav .nav-link:hover {
     color: #007bff;
 }
 
 body.light-theme .header .navbar-toggler-icon{
-    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+     background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.header .navbar-toggler-icon{
+     background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 /* Styles pour le bouton theme-toggle */
